# yarisc

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.py
emu/: CMakeLists.txt  emulator.cpp  emulator.hpp  main.cpp
tests/: CMakeLists.txt  add_test.cpp  halt_test.cpp  jump_test.cpp  load_test.cpp  machine.cpp  machine.hpp  move_test.cpp  nop_test.cpp  store_test.cpp
yarisc/: CMakeLists.txt
yarisc/arch/: CMakeLists.txt  assembly.cpp  assembly.hpp  debugger.cpp  debugger.hpp  feature_level.hpp  instructions.hpp  machine.cpp  machine.hpp  machine_model.cpp  machine_model.hpp  machine_profile.hpp  memory.cpp  memory.hpp  output.hpp  registers.hpp  types.hpp
yarisc/arch/detail/: colors.hpp  endianness.hpp  execution.hpp  format.hpp  functional.hpp  hex_memory.hpp  hex_registers.hpp  hex_word.hpp  status_bits.hpp
yarisc/utils/: CMakeLists.txt  color.cpp  color.hpp  ios.hpp
